tests/compile_fail/private_helper_leak.rs
use changeguard::impact::packet::serialization::deserialize_score;

fn main() {}
